# neoseg

./: README
aniso/: CMakeLists.txt  MRAnisotropicFilter.h  MRAnisotropicFilter.txx  testaniso.cxx
basicimg/: AtlasCropImageSource.h  AtlasCropImageSource.txx  CMakeLists.txt  ImageDirectionStandardizer.h  ImageDirectionStandardizer.txx  ImageIteratorSet.h  ImageSetManager.h  LabelMappingFilter.h  LabelMappingFilter.txx  OrientImageModifier.h  OrientImageModifier.txx  SplitAxisImageFilter.h  SplitAxisImageFilter.txx  SubsampledImageRegionIterator.h  SubsampledImageRegionIterator.txx  TrimmedRescaleImageModifier.h  TrimmedRescaleImageModifier.txx  UnsharpMaskingImageFilter.h  UnsharpMaskingImageFilter.txx  VectorMeanImageFilter.h  VectorMeanImageFilter.txx  splitaxis.cxx  testcrop.cxx  testit.cxx
bias/: CMakeLists.txt  LLSBiasCorrector.h  LLSBiasCorrector.txx  test.cxx
brainseg/: CMakeLists.txt  EMSParameters.cxx  EMSParameters.h  EMSegmentationFilter.h  EMSegmentationFilter.txx  EMSegmentationFilter_float+float.cxx  Parameters.cxx  README.txt  filterFloatImages.cxx  filterFloatImages.h  main.cxx  runEMS.cxx  runEMS.h
common/: DynArray.h  DynArray.txx  Heap.h  Heap.txx  Log.cxx  Log.h  MRUTable.h  MRUTable.txx  MersenneTwisterRNG.cxx  MersenneTwisterRNG.h  Pair.h  RNG.h  RNG.txx  TextFileReader.cxx  TextFileReader.h  Timer.cxx  Timer.h  Tokenizer.cxx  Tokenizer.h  mu.h  muCygwin.h  muException.h  muFile.cxx  muFile.h  muMacros.h  muUtils.h  testMT.cxx  testexc.cxx  testheap.cxx  testmacro.cxx  testmru.cxx  testpair.cxx  testrng.cxx
conn/: CMakeLists.txt  ConnectedComponentsFilter.h  ConnectedComponentsFilter.txx  test.cxx
neoseg/: CMakeLists.txt  NeoSegParameters.cxx  NeoSegParameters.h  NeonateSegmentationFilter.cxx  NeonateSegmentationFilter.h  example.xml  main.cxx  runNeonateSeg.cxx  runNeonateSeg.h
register/: AtlasRegistrationMethod.h  AtlasRegistrationMethod.txx  AtlasRegistrationMethod_float+float.cxx  CMakeLists.txt  ChainedAffineTransform3D.cxx  ChainedAffineTransform3D.h  GradientDescentOptimizer.cxx  GradientDescentOptimizer.h  NegativeMIImageMatchMetric.h  NegativeMIImageMatchMetric.txx  PairRegistrationMethod.h  PairRegistrationMethod.txx  PairRegistrationMethod_float.cxx  PowellOptimizer.cxx  PowellOptimizer.h  RegistrationParameters.h  mireg_affine.cxx  resample_label.cxx  test_chaff.cxx
robust/: CMakeLists.txt  FastMCDSampleFilter.cxx  FastMCDSampleFilter.h  KruskalMSTClusteringProcess.cxx  KruskalMSTClusteringProcess.h  MSTClusteringProcess.cxx  MSTClusteringProcess.h  fastmcd.m  test.cxx
spr/: CMakeLists.txt  KMeansEstimator.cxx  KMeansEstimator.h  KNNClassifier.cxx  KNNClassifier.h  KernelWidthEstimator.cxx  KernelWidthEstimator.h  ReducedSetDensityEstimator.cxx  ReducedSetDensityEstimator.h  TreeStructuredVectorQuantizer.cxx  TreeStructuredVectorQuantizer.h  test.cxx
xmlio/: CMakeLists.txt  EMSParametersXMLFile.cxx  EMSParametersXMLFile.h  NeoSegParametersXMLFile.cxx  NeoSegParametersXMLFile.h  test.cxx
